Making CSS look better overall

--- a/style.css
+++ b/style.css
@@ -4,13 +4,20 @@
 }
 
 body {
-    font-family: 'Roboto', 'Open Sans', sans-serif;
-    background-color: rgb(243, 243, 243);
-    background-color: black;
-}
 
-header{
-    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 100vh;
+
+    font-family: 'Roboto', 'Open Sans', sans-serif;
+    
+    background: url("./assets/bg-1080p.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 header, footer {
@@ -23,19 +30,32 @@ header, footer {
 
     text-align: center;
 
+    font-size: 16px;
     font-weight: 500;
-    color: #ffa392;
+    color: #ffb7af;
 
     background-color: rgb(243, 243, 243);
 }
 
+header{
+    margin-bottom: 20px;
+}
+
+footer{
+    bottom: 0px;
+}
+
+.pageTitle {
+    padding: 20px;
+}
+
 a{
     text-decoration: none;
-    color: #ffa392;
+    color: #ffb7af;
 }
 
 .calculation{
-    background-color: rgb(221, 62, 62);
+
 
     display: flex;
     justify-content: center;
@@ -69,9 +89,7 @@ select{
 }
 
 .sub-sec-title{
-
     margin: 10px 0;
-
     border-radius: 6px;
 
     height: 3vh;
@@ -86,7 +104,7 @@ select{
     font-weight: 500;
     color: rgb(243, 243, 243);
 
-    background-color: #ffa392;
+    background-color: #ffb7af;
 }
 
 .explanation{
@@ -94,7 +112,7 @@ select{
 }
 
 button {
-    background-color: rgb(243, 243, 243);
+    background-color: #ffb7af;
     border-radius: 100%;
     border: 0px none;
     height: 10vh;
@@ -102,9 +120,9 @@ button {
 }
 
 button:hover{
-    background-color: #ffa392;
+    background-color: #ffecea;
 }
 
 .credits > p{
-    font-size: 14px;
+    font-size: 13px;
 }
