--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly
 
     height: 100vh;
 
@@ -18,10 +18,13 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    image-rendering: auto;
+    image-rendering: crisp-edges;
 }
 
 header, footer {
-    height: 5vh;
+    height: 6vh;
     min-height: 50px;
 
     display: flex;
@@ -30,19 +33,23 @@ header, footer {
 
     text-align: center;
 
-    font-size: 16px;
     font-weight: 500;
     color: #ffb7af;
 
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(250, 250, 250);
 }
 
 header{
-    margin-bottom: 20px;
+    top: 0px;
+    position: fixed;
+    width: 100vw;
+    /* margin-bottom: 20px; */
 }
 
 footer{
     bottom: 0px;
+    position: fixed;
+    width: 100vw;
 }
 
 .pageTitle {
@@ -56,12 +63,13 @@ a{
 
 .calculation{
 
-
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+
+    margin: calc(6vh + 20px) auto 10px auto;
 }
 
 .dateConstructor{
@@ -102,25 +110,47 @@ select{
     align-items: center;
 
     font-weight: 500;
-    color: rgb(243, 243, 243);
+    color: rgb(250, 250, 250);
 
     background-color: #ffb7af;
 }
 
 .explanation{
-    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgb(250, 250, 250);
+
+    height: auto;
+    min-height: 300px;
+    width: 80vw;
+    max-width: 800px;
+
+    margin: 0 auto calc(6vh + 20px) auto;
+
+    border-radius: 6px;
 }
 
 button {
-    background-color: #ffb7af;
+    color: rgb(250, 250, 250);
+    font-size: 16px;
+    font-weight: 500;
+
+    background-color: #ff9589;
+
     border-radius: 100%;
     border: 0px none;
+
     height: 10vh;
     width: 10vh;
+
+    margin: 10px 0;
 }
 
 button:hover{
-    background-color: #ffecea;
+    color: #ff9589;
+    background-color: rgb(250, 250, 250);
 }
 
 .credits > p{
