--- a/style.css
+++ b/style.css
@@ -42,12 +42,20 @@ header{
     top: 0px;
     position: fixed;
     width: 100vw;
+
+    -webkit-box-shadow: 0px 6px 23px -9px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 6px 23px -9px rgba(0,0,0,0.2);
+    box-shadow: 0px 6px 23px -9px rgba(0,0,0,0.2);
 }
 
 footer{
     bottom: 0px;
     position: fixed;
     width: 100vw;
+
+    -webkit-box-shadow: 0px -6px 23px -9px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px -6px 23px -9px rgba(0,0,0,0.2);
+    box-shadow: 0px -6px 23px -9px rgba(0,0,0,0.2);
 }
 
 .pageTitle {
@@ -78,7 +86,7 @@ a{
     align-items: center;
     justify-content: space-evenly;
 
-    width: 80vw;
+    width: 90vw;
     max-width: 800px;
 }
 
@@ -103,7 +111,7 @@ select{
 
     height: 3vh;
     min-height: 40px;
-    width: 80vw;
+    width: 90vw;
     max-width: 800px;
 
     display: flex;
@@ -124,7 +132,7 @@ select{
 
     height: auto;
     min-height: 300px;
-    width: 80vw;
+    width: 90vw;
     max-width: 800px;
 
     margin: 10px auto calc(6vh + 30px) auto;
