--- a/style.css
+++ b/style.css
@@ -90,21 +90,6 @@ a{
     max-width: 800px;
 }
 
-select{
-    text-align: center;
-
-    height: 3vh;
-    min-height: 40px;
-
-    width: 100vw;
-
-    border: 0px none;
-    border-radius: 6px;
-
-    color: #ff9589;
-    background-color:rgb(250, 250, 250);
-}
-
 .sub-sec-title{
     margin: 10px 0;
     border-radius: 6px;
@@ -123,6 +108,65 @@ select{
     background-color: #ffb7af;
 }
 
+select{
+    text-align: center;
+
+    height: 3vh;
+    min-height: 40px;
+
+    width: 100vw;
+
+    border: 0px none;
+    border-radius: 6px;
+
+    color: #ffb7af;
+    background-color:rgb(250, 250, 250);
+}
+
+button {
+    color: rgb(250, 250, 250);
+    background-color: #ffb7af;
+
+    font-weight: 500;
+    font-size: 1rem;
+
+    border-radius: 100%;
+    border: 0px none;
+
+    
+
+    height: 15vh;
+    width: 15vh;
+
+    margin: 20px 0 10px 0;
+}
+
+button:hover{
+    color: #ff9589;
+    background-color: rgb(250, 250, 250);
+}
+
+.gaResClass, .eddResClass{
+    margin-bottom: 10px;
+    border-radius: 6px;
+
+    height: 3vh;
+    min-height: 40px;
+    width: 90vw;
+    max-width: 800px;
+
+    justify-content: center;
+    align-items: center;
+
+    font-style: italic;
+    font-weight: 500;
+    font-size: 14px;
+    color: #ffb7af;
+    background-color: rgb(250, 250, 250);
+
+    display: flex;
+}
+
 .explanation{
     display: flex;
     justify-content: center;
@@ -138,26 +182,6 @@ select{
     margin: 10px auto calc(6vh + 30px) auto;
 
     border-radius: 6px;
-}
-
-button {
-    color: rgb(250, 250, 250);
-    font-weight: 500;
-
-    background-color: #ff9589;
-
-    border-radius: 100%;
-    border: 0px none;
-
-    height: 16vh;
-    width: 16vh;
-
-    margin: 10px 0;
-}
-
-button:hover{
-    color: #ff9589;
-    background-color: rgb(250, 250, 250);
 }
 
 .credits > p{
