--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 body {
-
     display: flex;
     flex-direction: column;
 
@@ -31,7 +30,6 @@ header, footer {
     align-items: center;
 
     text-align: center;
-
     font-weight: 500;
     color: #ffb7af;
 
@@ -68,7 +66,6 @@ a{
 }
 
 .calculation{
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -133,8 +130,6 @@ button {
     border-radius: 100%;
     border: 0px none;
 
-    
-
     height: 15vh;
     width: 15vh;
 
@@ -186,4 +181,27 @@ button:hover{
 
 .credits > p{
     font-size: 13px;
+}
+
+.arrow{
+    width: 40px;
+    height: 40px;
+    margin: 3vh auto 2vh auto;
+    background-image: url(./assets/arrow.svg);
+    background-size: contain;
+}
+
+.bounce {
+animation: bounce 2s infinite;
+}
+    @keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            transform: translateY(0);
+        }
+        40% {
+            transform: translateY(-2vh);
+        }
+        60% {
+            transform: translateY(-1vh);
+    }
 }
