--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 header, footer {
     height: 6vh;
-    min-height: 50px;
+    min-height: 60px;
 
     display: flex;
     justify-content: center;
@@ -33,13 +33,14 @@ header, footer {
     font-weight: 500;
     color: #ffb7af;
 
-    background-color: rgb(250, 250, 250);
+    background-color: #fafafa;
 }
 
 header{
     top: 0px;
     position: fixed;
     width: 100vw;
+    z-index: 1;
 
     -webkit-box-shadow: 0px 6px 23px -9px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 6px 23px -9px rgba(0,0,0,0.2);
@@ -50,6 +51,7 @@ footer{
     bottom: 0px;
     position: fixed;
     width: 100vw;
+    z-index: 2;
 
     -webkit-box-shadow: 0px -6px 23px -9px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px -6px 23px -9px rgba(0,0,0,0.2);
@@ -72,7 +74,19 @@ a{
     flex-wrap: wrap;
     flex-direction: column;
 
-    margin: calc(6vh + 20px) auto 0 auto;
+    margin: calc(6vh + 28px) auto 0 auto;
+}
+
+h2, h4{
+    color: #ff9589;
+}
+
+hr{
+    border: 0px none;
+    background-color: #c7c7c7;
+
+    min-height: 1px;
+    width: 100%
 }
 
 .dateConstructor{
@@ -92,7 +106,7 @@ a{
     border-radius: 6px;
 
     height: 3vh;
-    min-height: 40px;
+    min-height: 36px;
     width: 90vw;
     max-width: 800px;
 
@@ -101,7 +115,7 @@ a{
     align-items: center;
 
     font-weight: 500;
-    color: rgb(250, 250, 250);
+    color: #fafafa;
     background-color: #ffb7af;
 }
 
@@ -109,7 +123,7 @@ select{
     text-align: center;
 
     height: 3vh;
-    min-height: 40px;
+    min-height: 36px;
 
     width: 100vw;
 
@@ -117,11 +131,11 @@ select{
     border-radius: 6px;
 
     color: #ffb7af;
-    background-color:rgb(250, 250, 250);
+    background-color:#fafafa;
 }
 
 button {
-    color: rgb(250, 250, 250);
+    color: #fafafa;
     background-color: #ffb7af;
 
     font-weight: 500;
@@ -132,13 +146,15 @@ button {
 
     height: 15vh;
     width: 15vh;
+    min-height: 150px;
+    min-width: 150px;
 
-    margin: 20px 0 10px 0;
+    margin: 25px 0 15px 0;
 }
 
 button:hover{
     color: #ff9589;
-    background-color: rgb(250, 250, 250);
+    background-color: #fafafa;
 }
 
 .gaResClass, .eddResClass{
@@ -146,7 +162,7 @@ button:hover{
     border-radius: 6px;
 
     height: 3vh;
-    min-height: 40px;
+    min-height: 36px;
     width: 90vw;
     max-width: 800px;
 
@@ -155,37 +171,54 @@ button:hover{
 
     font-style: italic;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 0.9rem;
     color: #ffb7af;
-    background-color: rgb(250, 250, 250);
+    background-color: #fafafa;
 
     display: flex;
 }
 
-.explanation{
+.explanationDiv{
+    box-sizing: border-box;
+
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 
-    background-color: rgb(250, 250, 250);
+    background-color: #fafafa;
 
     height: auto;
     min-height: 300px;
     width: 90vw;
     max-width: 800px;
 
-    margin: 10px auto calc(6vh + 30px) auto;
+    margin: 10px auto calc(6vh + 38px) auto;
+    padding: 3vh 3vh;
 
     border-radius: 6px;
 }
 
+.explanationText{
+    font-size: 0.9rem;
+    color: #a2a2a2;
+    line-height: 140%;
+    text-align: left;
+}
+
+.explanationText > p > strong{
+    color: #474747;
+    font-weight: 500;
+}
+
+
 .credits > p{
-    font-size: 13px;
+    font-size: 0.9rem;
 }
 
 .arrow{
-    width: 40px;
-    height: 40px;
+    min-height: 40px;
+    min-width: 40px;
     margin: 3vh auto 2vh auto;
     background-image: url(./assets/arrow.svg);
     background-size: contain;
